response to review - WIP

--- a/notebooks/drifter_3D.ipynb
+++ b/notebooks/drifter_3D.ipynb
@@ -47,9 +47,9 @@
     "import nwastats as st\n",
     "day = 86400\n",
     "\n",
-    "data_dir = \"data/\"\n",
+    "#data_dir = \"data/\"\n",
     "#data_dir = \"/home1/scratch/aponte/\"\n",
-    "#data_dir = \"/home/datawork-lops-osi/aponte/nwa/drifter_stats\"\n",
+    "data_dir = \"/home/datawork-lops-osi/aponte/nwa/drifter_stats\"\n",
     "\n",
     "production = False\n",
     "#production = True"
@@ -425,10 +425,10 @@
     "chunks = (20,-1)\n",
     "\n",
     "### dev\n",
-    "Nx, dx = 100, 10.  # km\n",
-    "Ny, dy = 100, 10.  # km\n",
-    "Nt, dt = 100*2, 1/2  # days\n",
-    "chunks = (10,-1)\n",
+    "#Nx, dx = 100, 10.  # km\n",
+    "#Ny, dy = 100, 10.  # km\n",
+    "#Nt, dt = 100*2, 1/2  # days\n",
+    "#chunks = (10,-1)\n",
     "\n",
     "# rescale grid parameters for some models\n",
     "if \"iso\" in Cmodel[0]:\n",
@@ -1333,9 +1333,9 @@
     "\n",
     "_dsd = (\n",
     "    ds\n",
-    "    #.isel(obs=slice(0, 24*10))\n",
-    "    #.sel(trajectory=np.random.choice(ds.trajectory.values, 500, replace=False))\n",
-    "    .sel(trajectory=np.random.choice(ds.trajectory.values, 10, replace=False)) # dev\n",
+    "    .isel(obs=slice(0, 24*10))\n",
+    "    .sel(trajectory=np.random.choice(ds.trajectory.values, 500, replace=False))\n",
+    "    #.sel(trajectory=np.random.choice(ds.trajectory.values, 10, replace=False)) # dev\n",
     ")\n",
     "for tr in _dsd.trajectory:\n",
     "    _ds = _dsd.sel(trajectory=tr.values)\n",
